Add front end templating

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
       </label>
       <button type="submit">Sign in</button>
     </form>
+
+    <div id="the-links">
+      <h2>Links</h2>
+      <p>
+        You have <span class="num"></span> customer entries for us in Stripe.
+        You can click either to manage that subscription for that customer
+        entry. Take note of your customer ID.
+      </p>
+      <li></li>
+    </div>
   </body>
 </html>
