Add signout functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="email" id="email" />
       </label>
       <button type="submit">Sign in</button>
+      <button type="reset" disabled>Sign out</button>
     </form>
 
     <div id="the-links">
